--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,79 @@
+body{
+	background-color: darkgrey;
+}
+.title{
+	font-size: 26px;
+	font-family: Anton;
+	margin-bottom: 10px;
+}
+.mpaa{
+	font-size: 13px;
+	font-family: Arial;
+}
+.wrapper{
+	padding-top: 30px;
+	/* paddin */
+}
+.overview{
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid grey;
+	text-align: justify;
+}
+.theWholeWorld{
+	/* background: linear-gradient(to bottom, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 33%, rgba(209,209,209,1) 56%, rgba(254,254,254,1) 100%); */
+	background-color: white;
+	position: relative;
+	margin: auto;
+	width: 1040px;
+	font-size: 14px;
+	font-family: Arial;
+}
+#carousel-example-generic{
+	float: left;
+	margin-left: 20px;
+}
+.nowPlayingChart{
+	height: 27px;
+	margin: 9px;
+	margin-left: 15px;
+	font-family: Arial;
+	font-size: 14px;
+	/* font-weight: 900; */
+}
+.nowPlayingTitle{
+	text-align: left;
+	margin: 15px;
+	font-family: Anton;
+	font-size: 18px;
+	/* text-decoration: underline; */
+}
+
+.topNowShowing{
+	position: relative;
+	float: left;
+	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	border: 1px solid grey;
+	height: 442px;
+	width: 280px;
+	margin-left: 15px;
+	margin-right: 20px;
+}
 .poster{
 	float: left;
+	padding: 15px 10px 25px 10px;
 }
 .poster img{
-	height: 450px;
+	height: 400px;
+	border: 2px solid white;
 }
 .right-box{
-	width: 360px;
-	height: 430px;
+	width: 370px;
+	height: 400px;
 	float: left;
-	margin-top: 20px;
-	margin-left: 20px;
+	margin-top: 15px;
+	margin-left: 5px;
+	margin-right: 15px;
 }
 #movie-grid{
 	padding: 0;
@@ -20,20 +84,38 @@
 }
 
 .carousel-inner{
-	width: 702px;
+	width: 700px;
 	margin: auto;
-	border: 1px solid black;
+	border: 1px solid grey;
+	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 }
 
 .preview img {
-	width: 60px;
-	height: 60px;
+	width: 55px;
+	height: 45px;
 }
 .search-results{
 	/* perspective: 1000px; */
 	
 }
-
+.vote-average{
+	/* margin-top: 10px */
+	/* font-size: 15px; */
+}
+.vote-average img{
+	margin-top: -5px;
+	height: 16px;
+	width: 16px;
+}
+.nowPlayingRating{
+	color: grey;
+}
+.nowPlayingRating img{
+	margin-top: -3px;
+	height: 13px;
+	width: 13px;
+	color: grey;
+}
 body{
 	/* background-color: blue; */
 	/* transform-style: preserve-3d; */
@@ -46,3 +128,73 @@ body{
 	/* border: 10px solid white; */
 
 }
+
+/******************/
+/**weather widget**/
+/******************/
+
+body{
+	font-family: 'Baloo Thambi';
+}
+
+canvas {
+	position: absolute;
+	left: 0px;
+}
+
+.degrees{
+	position: absolute;
+	top: 120px;
+	left: 135px;
+	text-align: center;
+	font-size: 25px;
+}
+
+.weather-description{
+	text-align: center;
+	position: absolute;
+	top: 160px;
+	left: 100px;
+	/* width: 130px; */
+	/* border: 1px solid black; */
+}
+.weather-week{
+	position: absolute;
+	top: 250px;
+}
+.weather-week div{
+	display: inline-block;
+	/* border: 1px solid black; */
+	/* padding: 10px; */
+	text-align: center;
+	width: 62px;
+	font-size: 20px;
+	font-family: 'Baloo Thambi';
+
+}
+
+.weather-wrapper{
+	border: 2px solid blue;
+	height: 375px;
+	width: 500px;
+	position: relative;
+	color: black;
+		font-family: 'Baloo Thambi';
+
+}
+
+.showTimes{
+	position: absolute;
+	right: 100px;
+	bottom: 5px;
+	border: 1px solid black;
+}
+
+.showTimeWrapper div{
+	display: inline-block;
+}
+
+/* .showTimeWrapper{ */
+	/* display: block;	 */
+/* } */
+
