--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body{
 	width: 1040px;
 	font-size: 14px;
 	font-family: Arial;
+	padding-bottom: 20px;
 }
 #carousel-example-generic{
 	float: left;
@@ -144,8 +145,8 @@ canvas {
 
 .degrees{
 	position: absolute;
-	top: 120px;
-	left: 135px;
+	top: 107px;
+	left: 63px;
 	text-align: center;
 	font-size: 25px;
 }
@@ -153,48 +154,96 @@ canvas {
 .weather-description{
 	text-align: center;
 	position: absolute;
-	top: 160px;
-	left: 100px;
-	/* width: 130px; */
-	/* border: 1px solid black; */
+	top: 50px;
+	right: 25px;
 }
 .weather-week{
 	position: absolute;
-	top: 250px;
+	top: 95px;
+	right: 20px;
+	border: 2px solid white;
+	border-right: none;
 }
 .weather-week div{
-	display: inline-block;
-	/* border: 1px solid black; */
-	/* padding: 10px; */
+	display: inline-block;/
 	text-align: center;
-	width: 62px;
-	font-size: 20px;
+	width: 45px;
+	font-size: 14px;
 	font-family: 'Baloo Thambi';
-
+	border-right: 2px solid white;
 }
-
 .weather-wrapper{
-	border: 2px solid blue;
-	height: 375px;
+	background: linear-gradient(to bottom, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	border: 1px solid grey;
+	height: 760px;
 	width: 500px;
+	margin-left: 20px;
 	position: relative;
 	color: black;
-		font-family: 'Baloo Thambi';
-
+	font-family: 'Baloo Thambi';
+	padding: 20px;
+	margin-bottom: 30px;
 }
 
+.tempHigh{
+	color: red;font-family: 'Baloo Thambi';
+	font-size: 18px;
+}
+.tempLow{
+	color: blue;font-family: 'Baloo Thambi';
+	font-size: 18px;
+}
+#currTemp{
+	font-size: 20px;
+	text-align: left;
+}
+
+
+/******************/
+/*****SHOW TIME****/
+/******************/
+
 .showTimes{
+
 	position: absolute;
-	right: 100px;
-	bottom: 5px;
-	border: 1px solid black;
+	top: 210px;
+	/* right: 100px; */
+	/* bottom: 5px; */
+	/* border: 1px solid black; */
+	font-family: 'Verdana';
+	width: 460px;
 }
 
 .showTimeWrapper div{
 	display: inline-block;
+	font-family:  Verdana;
+	/* height: 30px; */
 }
 
-/* .showTimeWrapper{ */
-	/* display: block;	 */
-/* } */
+.showTimeWrapper{
+	font-family:  Verdana;
+	padding-top: 10px;
+}
 
+.theaterName {
+	text-align: left;
+	font-family: 'Baloo Thambi';
+	font-size: 20px;
+	margin-bottom: 10px;
+	padding-top: 20px;
+	border-top: 1px solid grey;
+}
+.theaterName img{
+	height: 20px;
+	padding: 0;
+}
+
+.individualShowTimes {
+	text-align: left;
+	float: left;
+}
+
+.bookFandango {
+	text-align: left;
+	float: right;
+}
