--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 body{
-	background-color: darkgrey;
+	background: url('../background.jpg');
+}
+label{
+	color: white;
+}
+.nowPlaying{
+	font-size: 20px;
+	margin-left: 20px;
 }
 .title{
 	font-size: 26px;
@@ -12,7 +19,6 @@ body{
 }
 .wrapper{
 	padding-top: 30px;
-	/* paddin */
 }
 .overview{
 	margin-bottom: 10px;
@@ -21,8 +27,7 @@ body{
 	text-align: justify;
 }
 .theWholeWorld{
-	/* background: linear-gradient(to bottom, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 33%, rgba(209,209,209,1) 56%, rgba(254,254,254,1) 100%); */
-	background-color: white;
+	background: url('../background.png');
 	position: relative;
 	margin: auto;
 	width: 1040px;
@@ -95,14 +100,7 @@ body{
 	width: 55px;
 	height: 45px;
 }
-.search-results{
-	/* perspective: 1000px; */
-	
-}
-.vote-average{
-	/* margin-top: 10px */
-	/* font-size: 15px; */
-}
+
 .vote-average img{
 	margin-top: -5px;
 	height: 16px;
@@ -117,18 +115,7 @@ body{
 	width: 13px;
 	color: grey;
 }
-body{
-	/* background-color: blue; */
-	/* transform-style: preserve-3d; */
-}
 
-.search-results img{
-	width: 200px;
-	height: 300px;
-	/* transform: rotateY(-10deg); */
-	/* border: 10px solid white; */
-
-}
 
 /******************/
 /**weather widget**/
@@ -145,10 +132,10 @@ canvas {
 
 .degrees{
 	position: absolute;
-	top: 107px;
-	left: 63px;
+	top: 108px;
+	left: 69px;
 	text-align: center;
-	font-size: 25px;
+	font-size: 23px;
 }
 
 .weather-description{
@@ -165,6 +152,7 @@ canvas {
 	border-right: none;
 }
 .weather-week div{
+	background: rgba(222, 222, 222, .9);
 	display: inline-block;/
 	text-align: center;
 	width: 45px;
@@ -173,7 +161,7 @@ canvas {
 	border-right: 2px solid white;
 }
 .weather-wrapper{
-	background: linear-gradient(to bottom, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 	border: 1px solid grey;
 	height: 760px;
 	width: 500px;
@@ -182,7 +170,7 @@ canvas {
 	color: black;
 	font-family: 'Baloo Thambi';
 	padding: 20px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 
 .tempHigh{
@@ -193,9 +181,10 @@ canvas {
 	color: blue;font-family: 'Baloo Thambi';
 	font-size: 18px;
 }
-#currTemp{
+#currTemp{      /* city name */
 	font-size: 20px;
 	text-align: left;
+	padding-bottom: -3px;
 }
 
 
@@ -204,7 +193,6 @@ canvas {
 /******************/
 
 .showTimes{
-
 	position: absolute;
 	top: 210px;
 	/* right: 100px; */
@@ -233,8 +221,9 @@ canvas {
 	padding-top: 20px;
 	border-top: 1px solid grey;
 }
+
 .theaterName img{
-	height: 20px;
+	height: 25px;
 	padding: 0;
 }
 
@@ -246,4 +235,78 @@ canvas {
 .bookFandango {
 	text-align: left;
 	float: right;
+}
+
+#weather-form{
+	margin-left: 20px;
+	font-size: 20px;
+	display: inline-block;
+}
+
+#weather-form label, input{
+	margin-top: 20px;
+}
+#weather-form input{
+	width: 120px;
+	margin-left: 29px;
+}
+
+/******************/
+/***Search Movie***/
+/******************/
+
+.search-results img{
+	/* position: absolute; */
+	width: 120px;
+	height: 180px;
+	border: 4px solid white;
+}
+.search-results img:hover{
+	border: 4px solid blue;
+}
+.movie-form{
+	margin-bottom: 2px;
+	font-size: 20px;
+	margin-left: 20px
+}
+
+.search-results{
+	/* text-align: center; */
+	position: relative;
+	padding: 20px;
+	/* min-height: 200px; */
+	width: 700px;
+	display: inline-block;
+	margin: 20px;
+	margin-top: 0;
+	background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+}
+
+.searchMovieDescription{
+	position: absolute;
+	display: none;
+	width: 380px;
+	border: black solid 1px;
+	background-color: white;
+	padding: 10px;
+}
+
+.eachSearchMovie{
+	width: 120px;
+	height: 100%;
+	/* height: 180px; */
+	margin: 6px;
+	display: inline-block;
+	clear: right;
+}
+.green{
+	color: green;
+}
+.searchMovieTitle{
+	font-weight: 600;
+	font-size: 15px;
+}
+
+.searchMovieReleaseDate{
+	margin-bottom: 10px;
 }
