--- a/css/styles.css
+++ b/css/styles.css
@@ -38,12 +38,16 @@ label{
 	height: 760px;
 }
 .tv-wrapper img{
-	width: 100px;
-	clear: both;
+	/* width: 100px; */
 	/* display: inline-block; */
+	padding: 10px;
 }
 .eachTvShow{
 	display: inline-block;
+}
+.eachTvShow img{
+	width: 100px;
+	height: 150px;
 }
 .tvTitle{
 	
