--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,33 @@
 body{
-	background: url('../background.jpg');
+	background: url('../background2.png');
 	font-family: 'Baloo Thambi';
 }
 label{
+	color: yellow;
+
+}
+button{
+	font-size: 16px;
+}
+input{
+	font-size: 18px !important;
+	display: inline-block !important;
+}
+.header{
+	background: url('../background.png');
 	color: white;
-	/* float: left; */
+	position: fixed;
+	z-index: 30;
+	/* width: 1040px; */
+	width: 100%;
+	height: 50px;
+	border-bottom: 1px solid yellow;
+	border-top: none;
+	padding-left: 40px;
+	/* text-align: center; */
+	font-size: 24px;
+	line-height: 58px;
+	font-family: 'Orbitron'
 }
 .nowPlaying{
 	font-size: 20px;
@@ -20,7 +43,7 @@ label{
 	font-family: Arial;
 }
 .wrapper{
-	padding-top: 30px;
+	padding-top: 70px;
 	font-size: 14px;
 }
 .overview{
@@ -36,27 +59,41 @@ label{
 	display: inline-block;
 	margin-left: 20px;
 	height: 760px;
+	box-shadow: 3px 3px 10px 5px #000;
 }
-.tv-wrapper img{
-	/* width: 100px; */
-	/* display: inline-block; */
+.tv-wrapper{
 	padding: 10px;
 }
 .eachTvShow{
 	display: inline-block;
+	margin: 4px 7px;
+}
+.hiddenTvDescription{
+	color: black;
+	position: absolute;
+	display: none;
+	width: 320px;
+	border: black solid 1px;
+	background-color: white;
+	padding: 10px;
+	z-index: 3;
 }
 .eachTvShow img{
 	width: 100px;
-	height: 150px;
-}
-.tvTitle{
+	height: 140px;
+	border: 4px solid white;
 	
 }
-.tvDescription{
-	/* display: inline-block; */
+.eachTvShow img:hover{
+	border: 4px solid yellow;
+	box-shadow: 3px 3px 10px 3px #000;
+}
+.tvTitle{
+	font-size: 16px;
+	font-weight: 900;
 }
 .theWholeWorld{
-	background: url('../background.png');
+	background: url('../background2.png');
 	position: relative;
 	margin: auto;
 	width: 1040px;
@@ -74,14 +111,12 @@ label{
 	margin-left: 15px;
 	font-family: Arial;
 	font-size: 14px;
-	/* font-weight: 900; */
 }
 .nowPlayingTitle{
 	text-align: left;
 	margin: 15px;
 	font-family: Anton;
 	font-size: 18px;
-	/* text-decoration: underline; */
 }
 
 .topNowShowing{
@@ -92,6 +127,7 @@ label{
 	width: 280px;
 	margin-left: 15px;
 	margin-right: 20px;
+	box-shadow: 3px 3px 10px 5px #000;
 }
 .poster{
 	float: left;
@@ -99,7 +135,8 @@ label{
 }
 .poster img{
 	height: 400px;
-	border: 2px solid white;
+	/* border: 2px solid white; */
+	/* box-shadow: 3px 3px 10px 3px #000; */
 }
 .right-box{
 	width: 370px;
@@ -122,6 +159,7 @@ label{
 	margin: auto;
 	border: 1px solid grey;
 	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	box-shadow: 3px 3px 10px 5px #000;
 }
 
 .preview img {
@@ -148,7 +186,7 @@ label{
 /******************/
 /**weather widget**/
 /******************/
-canvas {
+canvas{
 	position: absolute;
 	left: 0px;
 }
@@ -173,7 +211,6 @@ canvas {
 	border-right: none;
 }
 .weather-week div{
-	background: rgba(222, 222, 222, .9);
 	display: inline-block;/
 	text-align: center;
 	width: 45px;
@@ -181,7 +218,23 @@ canvas {
 	font-family: 'Baloo Thambi';
 	border-right: 2px solid white;
 }
+.cloud{
+	position: absolute;
+	height: 120px;
+	width: 220px;
+	animation: linear 25s moveCloud infinite;
+}
+
+@keyframes moveCloud{
+	0%{
+		right: -50px;
+	}
+	100%{
+		right: 400px;
+	}
+}
 .weather-wrapper{
+	overflow: hidden;
 	background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 	border: 1px solid grey;
 	height: 760px;
@@ -189,11 +242,12 @@ canvas {
 	margin-left: 20px;
 	position: relative;
 	color: black;
-	font-family: 'Baloo Thambi';
+	font-family: Anton;
 	padding: 20px;
 	margin-bottom: 10px;
 	float: left;
 	clear: left;
+	box-shadow: 3px 3px 10px 5px #000;
 }
 
 .tempHigh{
@@ -218,19 +272,14 @@ canvas {
 .showTimes{
 	position: absolute;
 	top: 210px;
-	/* right: 100px; */
-	/* bottom: 5px; */
-	/* border: 1px solid black; */
 	font-family: 'Verdana';
 	width: 460px;
 }
 
-.showTimeWrapper div{
+/* .showTimeWrapper div{
 	display: inline-block;
 	font-family:  Verdana;
-
-	/* height: 30px; */
-}
+} */
 
 .showTimeWrapper{
 	font-family:  Verdana;
@@ -239,7 +288,7 @@ canvas {
 
 .theaterName {
 	text-align: left;
-	font-family: 'Baloo Thambi';
+	font-family: Anton;
 	font-size: 20px;
 	margin-bottom: 10px;
 	padding-top: 20px;
@@ -262,7 +311,7 @@ canvas {
 }
 
 #weather-form{
-	margin-left: 20px;
+	margin: 20px 0 7px 20px;
 	font-size: 20px;
 	float: left;
 	clear: both;
@@ -270,10 +319,9 @@ canvas {
 
 #weather-form label, input{
 	margin-top: 20px;
-	/* float: left; */
 }
 #weather-form input{
-	width: 120px;
+	width: 156px;
 	margin-left: 33px;
 }
 
@@ -282,26 +330,40 @@ canvas {
 /******************/
 
 .search-results img{
-	/* position: absolute; */
 	width: 120px;
 	height: 180px;
 	border: 4px solid white;
+	
 }
 .search-results img:hover{
-	border: 4px solid blue;
+	border: 4px solid yellow;
+	box-shadow: 3px 3px 10px 3px #000;
+}
+
+.eachSearchMovie{
+	width: 120px;
+	height: 100%;
+	margin: 8px;
+	display: inline-block;
+	clear: right;
 }
 .movie-form{
-	margin-bottom: 2px;
+	clear: both;
+	margin: 20px 0 7px 20px;
+	/* margin-bottom: 7px; */
 	font-size: 20px;
-	margin-left: 20px
+	/* margin-left: 20px */
+}
+
+.movie-form input{
+	width: 200px;
 }
 
 .search-results{
-	/* text-align: center; */
+	box-shadow: 3px 3px 10px 5px #000;
 	position: relative;
 	padding: 20px;
-	/* min-height: 200px; */
-	width: 700px;
+	width: 1000px;
 	display: inline-block;
 	margin: 20px;
 	margin-top: 0;
@@ -317,14 +379,6 @@ canvas {
 	padding: 10px;
 }
 
-.eachSearchMovie{
-	width: 120px;
-	height: 100%;
-	/* height: 180px; */
-	margin: 6px;
-	display: inline-block;
-	clear: right;
-}
 .green{
 	color: green;
 }
