--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ body{
 }
 label{
 	color: yellow;
-
 }
 button{
 	font-size: 16px;
@@ -18,13 +17,11 @@ input{
 	color: white;
 	position: fixed;
 	z-index: 30;
-	/* width: 1040px; */
 	width: 100%;
 	height: 50px;
 	border-bottom: 1px solid yellow;
 	border-top: none;
 	padding-left: 40px;
-	/* text-align: center; */
 	font-size: 24px;
 	line-height: 58px;
 	font-family: 'Orbitron'
@@ -69,12 +66,12 @@ input{
 	margin: 4px 7px;
 }
 .hiddenTvDescription{
-	color: black;
+	color: white;
 	position: absolute;
 	display: none;
 	width: 320px;
-	border: black solid 1px;
-	background-color: white;
+	border: yellow solid 2px;
+	background: url('../background.png');
 	padding: 10px;
 	z-index: 3;
 }
@@ -91,9 +88,9 @@ input{
 .tvTitle{
 	font-size: 16px;
 	font-weight: 900;
+	color: yellow;
 }
 .theWholeWorld{
-	background: url('../background2.png');
 	position: relative;
 	margin: auto;
 	width: 1040px;
@@ -118,7 +115,6 @@ input{
 	font-family: Anton;
 	font-size: 18px;
 }
-
 .topNowShowing{
 	float: right;
 	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
@@ -135,8 +131,6 @@ input{
 }
 .poster img{
 	height: 400px;
-	/* border: 2px solid white; */
-	/* box-shadow: 3px 3px 10px 3px #000; */
 }
 .right-box{
 	width: 370px;
@@ -149,11 +143,9 @@ input{
 #movie-grid{
 	padding: 0;
 }
-
 .each-movie{
 	margin: auto;
 }
-
 .carousel-inner{
 	width: 700px;
 	margin: auto;
@@ -161,12 +153,10 @@ input{
 	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 	box-shadow: 3px 3px 10px 5px #000;
 }
-
 .preview img {
 	width: 55px;
 	height: 45px;
 }
-
 .vote-average img{
 	margin-top: -5px;
 	height: 16px;
@@ -224,7 +214,6 @@ canvas{
 	width: 220px;
 	animation: linear 25s moveCloud infinite;
 }
-
 @keyframes moveCloud{
 	0%{
 		right: -50px;
@@ -249,7 +238,6 @@ canvas{
 	clear: left;
 	box-shadow: 3px 3px 10px 5px #000;
 }
-
 .tempHigh{
 	color: red;font-family: 'Baloo Thambi';
 	font-size: 18px;
@@ -263,30 +251,20 @@ canvas{
 	text-align: left;
 	padding-bottom: -3px;
 }
-
-
 /******************/
 /*****SHOW TIME****/
 /******************/
-
 .showTimes{
 	position: absolute;
 	top: 210px;
 	font-family: 'Verdana';
 	width: 460px;
 }
-
-/* .showTimeWrapper div{
-	display: inline-block;
-	font-family:  Verdana;
-} */
-
 .showTimeWrapper{
 	font-family:  Verdana;
 	padding-top: 10px;
 }
-
-.theaterName {
+.theaterName{
 	text-align: left;
 	font-family: Anton;
 	font-size: 20px;
@@ -350,9 +328,7 @@ canvas{
 .movie-form{
 	clear: both;
 	margin: 20px 0 7px 20px;
-	/* margin-bottom: 7px; */
 	font-size: 20px;
-	/* margin-left: 20px */
 }
 
 .movie-form input{
@@ -362,29 +338,39 @@ canvas{
 .search-results{
 	box-shadow: 3px 3px 10px 5px #000;
 	position: relative;
-	padding: 20px;
+	/* padding: 20px; */
 	width: 1000px;
 	display: inline-block;
 	margin: 20px;
 	margin-top: 0;
 	background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 }
-
-.searchMovieDescription{
-	position: absolute;
-	display: none;
-	width: 380px;
-	border: black solid 1px;
-	background-color: white;
-	padding: 10px;
+.modal-content{
+	padding: 20px;
+	font-size: 20px;
+	background: url('../background.png');
+	border: yellow solid 2px;
+	color: white;
 }
-
+.searchMovieDescription{
+	/* position: absolute; */
+	/* display: none; */
+	/* width: 380px; */
+	border: yellow solid 2px;
+	background: url('../background.png');
+	padding: 10px;
+	color: white;
+}
+.modal{
+	padding: 20px !important;
+}
 .green{
-	color: green;
+	color: orange;
 }
 .searchMovieTitle{
 	font-weight: 600;
-	font-size: 15px;
+	font-size: 24px;
+	color: yellow;
 }
 
 .searchMovieReleaseDate{
