--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ input{
 	margin-left: 20px;
 	height: 760px;
 	box-shadow: 3px 3px 10px 5px #000;
+	border-radius: 1%;
 }
 .tvAirDate{
 	color: orange;
@@ -76,10 +77,11 @@ input{
 	height: 135px;
 	margin: 0;
 	border: 2px solid white;
+	border-radius: 5%;
 }
 .eachTvShow img:hover{
 	border: 4px solid yellow;
-	box-shadow: 3px 3px 10px 5px #000;
+	box-shadow: 1px 1px 10px 2px #000;
 }
 
 .eachSearchMovie img{
@@ -131,6 +133,7 @@ input{
 	margin-left: 15px;
 	margin-right: 20px;
 	box-shadow: 3px 3px 10px 5px #000;
+	border-radius: 1%;
 }
 .poster{
 	float: left;
@@ -138,6 +141,7 @@ input{
 }
 .poster img{
 	height: 400px;
+	border-radius: 2%;
 }
 .right-box{
 	width: 370px;
@@ -159,6 +163,7 @@ input{
 	border: 1px solid grey;
 	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
 	box-shadow: 3px 3px 10px 5px #000;
+	border-radius: 1%;
 }
 .preview img {
 	width: 55px;
@@ -244,6 +249,7 @@ canvas{
 	float: left;
 	clear: left;
 	box-shadow: 3px 3px 10px 5px #000;
+	border-radius: 1%;
 }
 .tempHigh{
 	color: red;font-family: 'Baloo Thambi';
@@ -315,20 +321,20 @@ canvas{
 /******************/
 
 .search-results img{
-	width: 120px;
-	height: 180px;
-	border: 4px solid white;
-	
+	width: 150px;
+	height: 240px;
+	border: 2px solid white;
+	border-radius: 5%;
 }
 .search-results img:hover{
 	border: 4px solid yellow;
-	box-shadow: 3px 3px 10px 3px #000;
+	box-shadow: 1px 1px 10px 2px #000;
 }
 
 .eachSearchMovie{
-	width: 120px;
-	height: 200px;
-	margin: 0 8px;
+	width: 155px;
+	height: 260px;
+	margin: 0 3px;
 	display: inline-block;
 	clear: right;
 	background-color: #C0C0C0;
@@ -347,11 +353,13 @@ canvas{
 	box-shadow: 3px 3px 10px 5px #000;
 	position: relative;
 	padding-top: 10px;
+	padding-left: 10px;
 	width: 1000px;
 	display: inline-block;
 	margin: 20px;
 	margin-top: 0;
 	background-color: #C0C0C0;
+	border-radius: 1%;
 }
 .modal-content{
 	padding: 20px;
@@ -362,7 +370,7 @@ canvas{
 	min-height: 235px;
 }
 .search-results .modal-content{
-	min-height: 320px;
+	min-height: 370px;
 }
 .modal{
 	padding: 20px !important;
@@ -386,3 +394,22 @@ canvas{
 .searchMovieReleaseDate{
 	margin-bottom: 10px;
 }
+.table{
+	margin: 7px 20px 20px 20px;
+	width: 1000px;
+	background-color: white;
+	box-shadow: 3px 3px 10px 5px #000;
+}
+th{
+	text-align: center;
+}
+.stock-wrapper{
+	float: left;
+	margin-top: 20px;
+}
+.stock-wrapper label{
+	font-size: 20px;
+	margin: 0 10px 0 20px;
+
+}
+
