--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,32 @@
 body{
-	background: url('../images/background2.png');
+	background-color: #122230;
 	/* font-family: 'Baloo Thambi'; */
+
 	font-family: sans-serif;
 }
+
 label{
 	color: yellow;
 }
 button{
 	font-size: 16px;
 }
+.eachTvShow button, .eachSearchMovie button {
+	padding: 0 !important;
+	border: none !important;
+}
 input{
 	font-size: 18px !important;
 	display: inline-block !important;
 }
 .header{
-	background: url('../images/background.png');
-	color: white;
+	/* background: url('../images/background.png'); */
+	background-color: #fafafa;
+	color: #122230;
 	position: fixed;
 	z-index: 30;
 	width: 100%;
 	height: 50px;
-	border-bottom: 1px solid yellow;
 	border-top: none;
 	padding-left: 40px;
 	font-size: 24px;
@@ -55,12 +61,13 @@ input{
 }
 .tv-wrapper{
 	width: 480px;
-	background-color: #C0C0C0;
+	/* background-color: #C0C0C0; */
+	background-color: #fafafa;
 	color: white;
 	display: inline-block;
 	margin-left: 20px;
 	height: 760px;
-	box-shadow: 3px 3px 10px 5px #000;
+	/* box-shadow: 3px 3px 10px 5px #000; */
 	border-radius: 1%;
 }
 .tvAirDate{
@@ -74,27 +81,18 @@ input{
 	padding: 0;
 }
 .eachTvShow img{
-	width: 102px;
-	height: 135px;
+	width: 115px;
+	height: 149px;
 	margin: 0;
 	border: 2px solid white;
-	border-radius: 5%;
+	/* border-radius: 5%; */
 }
 .eachTvShow img:hover{
-	border: 4px solid yellow;
-	box-shadow: 1px 1px 10px 2px #000;
+	opacity: .5;
+	/* box-shadow: 1px 1px 10px 2px #000; */
 }
 
-.eachSearchMovie img{
-	width: 100px;
-	height: 140px;
-	border: 4px solid white;
-	
-}
-.eachSearchMovie img:hover{
-	border: 4px solid yellow;
-	box-shadow: 3px 3px 10px 3px #000;
-}
+
 .tvTitle{
 	font-size: 22px;
 	font-weight: 900;
@@ -127,13 +125,14 @@ input{
 }
 .topNowShowing{
 	float: right;
-	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	/* background: linear-gradient(to top, rgba(166,174,179,8) 0%, rgba(250,250,250,1) 100%); */
+	background-color: #fafafa;
 	border: 1px solid grey;
 	height: 442px;
 	width: 280px;
 	margin-left: 15px;
 	margin-right: 20px;
-	box-shadow: 3px 3px 10px 5px #000;
+	/* box-shadow: 3px 3px 10px 5px #000; */
 	border-radius: 1%;
 }
 .poster{
@@ -162,8 +161,9 @@ input{
 	width: 700px;
 	margin: auto;
 	border: 1px solid grey;
-	background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
-	box-shadow: 3px 3px 10px 5px #000;
+	/* background: linear-gradient(to top, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%); */
+	/* box-shadow: 3px 3px 10px 5px #000; */
+	background-color: #fafafa;
 	border-radius: 1%;
 }
 .preview img {
@@ -237,7 +237,8 @@ canvas{
 }
 .weather-wrapper{
 	overflow: hidden;
-	background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%);
+	/* background: linear-gradient(to right, rgba(166,174,179,1) 0%, rgba(250,250,250,1) 100%); */
+	background-color: #fafafa;
 	border: 1px solid grey;
 	height: 760px;
 	width: 500px;
@@ -249,7 +250,7 @@ canvas{
 	margin-bottom: 10px;
 	float: left;
 	clear: left;
-	box-shadow: 3px 3px 10px 5px #000;
+	/* box-shadow: 3px 3px 10px 5px #000; */
 	border-radius: 1%;
 }
 .tempHigh{
@@ -322,23 +323,23 @@ canvas{
 /******************/
 
 .search-results img{
-	width: 150px;
+	width: 163px;
 	height: 240px;
 	border: 2px solid white;
-	border-radius: 5%;
+	/* border-radius: 5%; */
 }
 .search-results img:hover{
-	border: 4px solid yellow;
-	box-shadow: 1px 1px 10px 2px #000;
+	opacity: .5
 }
 
 .eachSearchMovie{
-	width: 155px;
-	height: 260px;
-	margin: 0 3px;
+	width: 163px;
+	height: 242px;
+	
 	display: inline-block;
 	clear: right;
-	background-color: #C0C0C0;
+	/* background-color: #C0C0C0; */
+	background-color: #fafafa;
 }
 .movie-form{
 	clear: both;
@@ -351,7 +352,7 @@ canvas{
 }
 
 .search-results{
-	box-shadow: 3px 3px 10px 5px #000;
+	/* box-shadow: 3px 3px 10px 5px #000; */
 	position: relative;
 	padding-top: 10px;
 	padding-left: 10px;
@@ -359,7 +360,8 @@ canvas{
 	display: inline-block;
 	margin: 20px;
 	margin-top: 0;
-	background-color: #C0C0C0;
+	/* background-color: #C0C0C0; */
+	background-color: #fafafa;
 	border-radius: 1%;
 }
 .modal-content{
@@ -399,7 +401,7 @@ canvas{
 	margin: 7px 20px 20px 20px;
 	width: 1000px;
 	background-color: white;
-	box-shadow: 3px 3px 10px 5px #000;
+	/* box-shadow: 3px 3px 10px 5px #000; */
 }
 th{
 	text-align: center;
